
model Admin {
  adminId Int @id @default(autoincrement())
  fullname String
  
  username String
  hashedPassword String
}