model Product {
    productId          Int      @id @default(autoincrement())
    productName        String
    currentPrice       Int
    originalPrice      Int
    quantity           Int      @default(0)
    publishedAt        DateTime @default(now())
    brand              String?
    productDescription String?
    numSoldProduct     Int      @default(0)
    productImageUrl    String?
    stars              Float    @default(1)
    numReviews         Float

    categories ProductCategory[]
}
