model ShippingAddress {
  addressId Int @id @default(autoincrement())
  userId Int
  country String?
  city String?
  district String?
  ward String?
  detailAddress String?

  user User @relation(fields: [userId], references: [userId], onDelete: Restrict)
}


