model User {
  id                Int      @id @default(autoincrement())
  email             String   @unique
  password          String
  lastLogin         DateTime?
  createdAt         DateTime @default(now())
  phoneNumber       String?
  confirmedAt       DateTime?
  confirmationCode  String?
  resetPasswordToken String?
}